# NotYetAccuratelyNamedChat

./: settings.gradle.kts
composeApp/: Cargo.toml  build.gradle.kts
composeApp/src/androidMain/kotlin/me/lmazur/notyetaccuratelynamedchat/: MainActivity.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/me/lmazur/notyetaccuratelynamedchat/: App.kt
composeApp/src/commonMain/rust/: database.rs  lib.rs
composeApp/src/commonTest/kotlin/me/lmazur/notyetaccuratelynamedchat/: ComposeAppCommonTest.kt
composeApp/src/jvmMain/kotlin/me/lmazur/notyetaccuratelynamedchat/: main.kt
server/: build.gradle.kts
server/src/main/kotlin/me/lmazur/notyetaccuratelynamedchat/: Application.kt
server/src/test/kotlin/me/lmazur/notyetaccuratelynamedchat/: ApplicationTest.kt
shared/: build.gradle.kts
shared/src/androidMain/kotlin/me/lmazur/notyetaccuratelynamedchat/: Platform.android.kt
shared/src/commonMain/kotlin/me/lmazur/notyetaccuratelynamedchat/: Constants.kt  Greeting.kt  Platform.kt
shared/src/commonTest/kotlin/me/lmazur/notyetaccuratelynamedchat/: SharedCommonTest.kt
shared/src/jvmMain/kotlin/me/lmazur/notyetaccuratelynamedchat/: Platform.jvm.kt
